# rsnake

./: Cargo.toml  README.md
docs/: README.en.md
src/: events.rs  game.rs  graphics.rs  main.rs
